--- a/leaderboard/src/leaderboard/static/css/style.css
+++ b/leaderboard/src/leaderboard/static/css/style.css
@@ -206,6 +206,11 @@ tr:nth-child(even) {
   background-color: white;
 }
 
+.not-submitted {
+  opacity: 0.8;
+  background-color: white;
+}
+
 .security_nothing {
   opacity: 0.2;
 }
